--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "uniqid": "^5.0.3"
   },
   "devDependencies": {
     "chai": "^4.1.2",
